tests/ui/issues/issue-50571.stderr
error: patterns aren't allowed in trait methods in the 2015 edition
  --> $DIR/issue-50571.rs:6:12
   |
LL |     fn foo([a, b]: [i32; 2]) {}
   |            ^^^^^^
   |
   = note: upgrading editions will fix this error
help: in this edition, give this argument a name or use an underscore to ignore it
   |
LL -     fn foo([a, b]: [i32; 2]) {}
LL +     fn foo(_: [i32; 2]) {}
   |

error: aborting due to 1 previous error

